Organize imports on tests